.kube/docs/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: x-ui-docs
  labels:
    appFamily: dxp
    appType: web-app
spec:
  selector:
    matchLabels:
      app: x-ui-docs
  template:
    metadata:
      name: x-ui-docs
      labels:
        app: x-ui-docs
        appType: app
    spec:
      containers:
        - name: x-ui-docs
          image: viewdo/x-ui-docs
          resources:
            requests:
              cpu: 100m
              memory: 128M
            limits:
              cpu: 300m
              memory: 256M
          ports:
            - containerPort: 80
              protocol: TCP
      nodeSelector:
        node-type: dynamic
      tolerations:
        - key: 'task'
          operator: 'Equal'
          value: 'preemptive'
          effect: 'NoSchedule'
