.kube/docs/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: x-ui-docs
    appFamily: x-ui
  name: x-ui-docs
spec:
  ports:
    - name: web
      port: 80
  selector:
    app: x-ui-docs
