.kube/docs/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: x-ui-docs
  annotations:
    kubernetes.io/ingress.class: traefik-viewdo
    #ingress.kubernetes.io/ssl-redirect: "true"
spec:
  rules:
    - host: demo.x-ui.dev
      http:
        paths:
          - backend:
              serviceName: x-ui-docs
              servicePort: web
    - host: x-ui.stage.viewdo.run
      http:
        paths:
          - backend:
              serviceName: x-ui-docs
              servicePort: web
